--- a/testmap.html
+++ b/testmap.html
@@ -10,6 +10,7 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
 	<script src="/Users/qiao/datamaps/dist/datamaps.world.min.js"></script>
 	<div id="container" style="position: relative; width: 500px; height: 300px;"></div>
+  <script src="../assets/js/map.js"></script>
 <body>
 	<p> STUB </p>
 	<script>
