--- a/index.html
+++ b/index.html
@@ -1,21 +1,87 @@
-
 <!DOCTYPE html>
-<html>
-<head>
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-	<script src="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.min.js"></script>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel = "stylesheet" href = "style.css" type = "text/css">
-</head>
-<body>
-	<div id="box1">
-		<div id="text">Hi, I'm Qiao</div>
-	</div>
-	<div id="box2">
-		<div><img id="avatar" src="avatar.jpg"/></div>
-	</div>
-	<div id="box3">
-		<div id="icons"><img style="width:40px;height:40px;" src="facebook.svg"/><img style="width:40px;height:40px;" src="github.svg"/></div>
-	</div>
-</body>
-</html>
+<html lang="en">
+    <head>
+        <title>Ciao Qiao</title>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <meta name="description" content="Briana Vecchione's Website" />
+        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
+        <script src="http://d3js.org/d3.v3.min.js"></script>
+ 		<script src="http://d3js.org/topojson.v1.min.js"></script>
+  		<script src="http://datamaps.github.io/scripts/datamaps.world.min.js?v=1"></script>
+  		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+		<!--<script src="jquery.sticky.js"></script>
+		<script> $(window).load(function(){ $("#nav").sticky({ topSpacing: 0 }); }); </script>-->
+    	<!-- <link rel="icon" href="img/favicon.ico" type="image/x-icon"/> -->
+    </head>
+    <body>
+
+    <!-- Header -->
+    <div class="header">
+            <h1>Qiao</h1>
+            <br>
+            <div class="favicons">
+                <ul>
+                	<!-- <li><div class="hvr-grow"><a href="http://twitter.com/brianavecchione"><i class="fa fa-twitter-square"></i></a></div></li> -->
+                    <li><div class="hvr-grow"><a target="_blank" href="https://www.linkedin.com/in/hanqiao69"><i class="fa fa-linkedin-square"></i></a></div></li>
+                    <li><div class="hvr-grow"><a target="_blank" href="https://github.com/hanqiao69"><i class="fa fa-github"></i></a></div></li>
+                    <li><div class="hvr-grow"><a target="_blank" href="http://facebook.com/ciao.qiao"><i class="fa fa-facebook-square"></i></a></div></li>
+                    <li><div class="hvr-grow"><a target="_blank" href="https://www.instagram.com/ciao.qiao/"><i class="fa fa-instagram"></i></a></div></li>
+                </ul>
+                <div class="img-circular"></div>
+            </div>
+
+            <!-- Navigation -->
+            <div class="nav">
+                <a href="#qiao"></a>
+            </div>
+        </div>
+        <div class="navbar">
+            <nav>
+                <div class="content">
+                    <ul>
+                        <li class="action-item"></li>
+                        <li><a href="#about"><p>About</p></a></li>
+                        <li><a href="#projects"><p>Projects</p></a></li>
+                        <li><a href="#blogs"><p>Blogs</p></a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+
+        <!--About -->
+        <section id="about">
+            <div class="content">
+                <h2 class="about">About</h2>
+
+                <p>Hi, my name is Qiao. I also go by Rachel. I was born and raised a single child in Beijing, China and currently studies Computer Science at University of Pennsylvania.</p>
+
+                <p></p>
+
+        	</div>
+        </section>
+
+        <!-- Speaking & Press -->
+        <section id="projects">
+            <div class="content">
+                <h2>Projects</h2>
+                <h4>Safe Glow</h4>
+                <h4>The Circle of Time (on-going)</h4>
+                <p></p>
+            </div>
+        </section>
+
+        <!-- Projects -->
+        <section id="blogs">
+            <div class="content">
+            <h2>Blogs</h2>
+          </div>
+        </section>
+  </body>
+
+            </div>
+        </section>
+            </body>
+            </div>
+            </body>
+            </html>
