add other project links to project section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
 		<section id="projects">
 			<div class="content">
 				<h2>Projects</h2>
-				<a href="project_map.html"><h4>Footprints</h4></a>
+				<a href="project_map.html"><h4>Footprints Around the World</h4></a>
+				<a href="http://kongsally.github.io/RittenhouseOrrery/index.html"><h4>David Rittenhouse's 1771 Orrery</h4></a>
+				<a href="http://devpost.com/software/anowlysis"><h4>AnOwlysis Personality Analysis and Writing Aid</h4></a>
+				<a href="http://devpost.com/software/safe-glow"><h4>Safe Glow</h4></a>
+				<a href="https://www.youtube.com/watch?v=qalA93L1eVk"><h4>MySky Virtual Reality Planetarium</h4></a>
 				<a href="project_time.html"><h4>The Circle of Time (on-going)</h4></a>
 				<p></p>
 			</div>
